# HCppBox

./: CMakeLists.txt  LICENSE  ReadMe.md
hbox/: CMakeLists.txt  ReadMe.md  SConscript  h3rdparty.c  h3rdparty.h  h3rdparty_mqtt_packet.c  h3rdparty_printf.c  h3rdparty_softfloat.c  h3rdparty_softfp.c  hbase64.c  hbase64.h  hbox.h  hcompiler.c  hcompiler.h  hcrypto.c  hcrypto.h  hdefaults.c  hdefaults.h  hdriverframework.c  hdriverframework.h  hevent.c  heventchain.c  heventchain.h  heventloop.c  heventloop.h  heventslots.c  heventslots.h  hgui.c  hlocale.c  hlocale.h  hmemory.c  hmemory.h  hmemoryheap.c  hmemoryheap.h  hmodbus.c  hmodbus.h  hnet.c  hobject.c  hobject.h  hringbuf.c  (+17 more)
hbox/cpp/: ReadMe.md  SConscript  hchain.cpp  hchain.h  hcpprt.cpp  hcpprt.h  hfifo.cpp  hfifo.h  hloop.h  hobj.h  hsim.h  hslots.h  hsoftdog.cpp  hsoftdog.h
hbox/gui/: ReadMe.md  hgui_gui_common.c  hgui_gui_common.h  hgui_gui_dotfont.c  hgui_gui_dotfont.h  hgui_gui_driver.c  hgui_gui_driver.h  hgui_gui_event.c  hgui_gui_event.h  hgui_gui_gui.h  hgui_gui_pixel.c  hgui_gui_pixel.h  hgui_gui_scene1.c  hgui_gui_scene1.h
hbox/h3rdparty/: ReadMe.md  h3rdparty.h  h3rdparty_Z80_Z80.c  h3rdparty_argtable3_arg_cmd.c  h3rdparty_argtable3_arg_date.c  h3rdparty_argtable3_arg_dbl.c  h3rdparty_argtable3_arg_dstr.c  h3rdparty_argtable3_arg_end.c  h3rdparty_argtable3_arg_file.c  h3rdparty_argtable3_arg_getopt_long.c  h3rdparty_argtable3_arg_hashtable.c  h3rdparty_argtable3_arg_int.c  h3rdparty_argtable3_arg_lit.c  h3rdparty_argtable3_arg_rem.c  h3rdparty_argtable3_arg_rex.c  h3rdparty_argtable3_arg_str.c  h3rdparty_argtable3_arg_utils.c  h3rdparty_argtable3_argtable3.c  h3rdparty_cjson.c  h3rdparty_cjson_port.c  h3rdparty_cjsonutils.c  h3rdparty_common.c  h3rdparty_freebsd_elf_header.c  h3rdparty_freertos_kernel_croutine.c  h3rdparty_freertos_kernel_event_groups.c  h3rdparty_freertos_kernel_heap.c  h3rdparty_freertos_kernel_list.c  h3rdparty_freertos_kernel_queue.c  h3rdparty_freertos_kernel_stream_buffer.c  h3rdparty_freertos_kernel_tasks.c  h3rdparty_freertos_kernel_timers.c  h3rdparty_libfdt_fdt.c  h3rdparty_libfdt_fdt_addresses.c  h3rdparty_libfdt_fdt_check.c  h3rdparty_libfdt_fdt_empty_tree.c  h3rdparty_libfdt_fdt_overlay.c  h3rdparty_libfdt_fdt_ro.c  h3rdparty_libfdt_fdt_rw.c  h3rdparty_libfdt_fdt_strerror.c  h3rdparty_libfdt_fdt_sw.c  (+70 more)
hbox/hcompiler/: ReadMe.md  hcompiler.c  hcompiler.h  hcompiler_armcc.h  hcompiler_armclang.h  hcompiler_default.h  hcompiler_gcc.h  hcompiler_msvc.h
hbox/hcrypto/: ReadMe.md  haes.c  hbase64.c  hbignum.c  hbignum.h  hcrc.c  hcrc.h  hhmac.c  hlrc.h  hmd5.c  hmd5.h  hripemd160.c  hrng.c  hrng.h  hrsa.c  hrsa.h  hsha.c  hsha.h  hsm4.c
hbox/hdefaults/: ReadMe.md  hdefaults.c  hdefaults.h  hdefaults_arch.h  hdefaults_baseapi.c  hdefaults_config.h  hdefaults_config_default.h  hdefaults_endian.h  hdefaults_libc.h  hdefaults_libc_armclib.h  hdefaults_libc_common.h  hdefaults_libc_icc.h  hdefaults_libc_mingw.h  hdefaults_libc_msvc.h  hdefaults_libc_newlib.h  hdefaults_libc_picolibc.h  hdefaults_os_android.h  hdefaults_os_cygwin.h  hdefaults_os_emscripten.h  hdefaults_os_freebsd.h  hdefaults_os_linux.h  hdefaults_os_none.h  hdefaults_os_nuttx.h  hdefaults_os_rtthread.h  hdefaults_os_unix.h  hdefaults_os_windows.h  hdefaults_os_zephyr.h  hdefaults_platform_esp.h  hdefaults_usercall.h
hbox/hdriverframework/: ReadMe.md  hdriverframework.c  hdriverframework.h  hdriverframework_dummy.c  hdriverframework_dummy.h
hbox/hevent/: heventchain.c  heventloop.c  heventslots.c  heventslots.h
hbox/hgui/: ReadMe.md  hgui_gui_common.c  hgui_gui_dotfont.c  hgui_gui_driver.c  hgui_gui_pixel.c
hbox/hlocale/: ReadMe.md  hgb2312.c  hlocale.c  hlocale.h
hbox/hmemory/: ReadMe.md  hdoublylinkedlist.c  hdoublylinkedlist.h  hfiledescriptor.c  hfiledescriptor.h  hmemoryheap.c  hmemorystaticallocator.c  hmemorystaticallocator.h  hringbuf.c  hsoftwarevirtualmemory.c  hsoftwarevirtualmemory.h
hbox/hmodbus/: hmodbus_io_interface.c
hbox/hruntime/: ReadMe.md  hexecutableloader.c  hexecutableloader.h  hruntime.c  hruntime.h  hsoftwaretimer.c  hsoftwaretimer.h
hbox/hshell/: ReadMe.md  hshell.c  hshell.h  hshell_command.h  hshell_context.c  hshell_context.h  hshell_ctlseq.c  hshell_ctlseq.h  hshell_defaults.h
hbox/hsoftplc/: ReadMe.md  hsoftplc.c  hsoftplc.h  hsoftplc_dll.h
hbox/hstacklesscoroutine/: ReadMe.md
hbox/hstandalone/: CMakeLists.txt  ReadMe.md
hbox/huuid/: huuid.c  huuid.h  huuid_short.h
hbox/modbus/: crc.c  data.c  hmodbus_crc.c  hmodbus_io_interface.c  hmodbus_io_interface.h  hmodbus_rtu_master.h  hmodbus_tcp_client.h  hmodbus_user_extend.h  io_interface.c  modbus.h  modbususerextend.h  rtu.c  rtu_master.c  rtu_slave_tiny.c  tcp.c  tcp_client.c  tcp_gateway_server.c
hbox/pbinc/: ReadMe.md  main_entry.pb.h
hbox/simulator/: ReadMe.md
hbox/template/: config.h
hcppbox/: CMakeLists.txt  HCPPBox.h  HCPPGlobalObject.cpp  HCPPGui.cpp  HCPPGui.h  HCPPInit.cpp  HCPPInit.h  HCPPObject.cpp  HCPPObject.h  HCPPObjectPool.cpp  HCPPObjectPool.h  HCPPSocket.cpp  HCPPSocket.h  HCPPThread.cpp  HCPPThread.h  HCPPTimer.cpp  HCPPTimer.h  ReadMe.md  SConscript
hplatformbox/: CMakeLists.txt
hplatformbox/mcs-51/: ReadMe.md  toolchain.cmake
hplatformbox/risc-v/: CMakeLists.txt
hrc/: .gitignore  CMakeLists.txt  ReadMe.md  SConscript
htools/: CMakeLists.txt  ReadMe.md
htools/3rdparty_tools/: CMakeLists.txt  ReadMe.md
htools/common/: CMakeLists.txt  CheckExternalLibrariesAndTools.cmake  common_wxwidgets.cpp
htools/hcrypto_tools/: CMakeLists.txt  ReadMe.md
htools/hgui_tools/: CMakeLists.txt  ReadMe.md
htools/hmisc_tools/: CMakeLists.txt  ReadMe.md
htools/hnet_tools/: CMakeLists.txt  ReadMe.md
htools/hsimulator_tools/: CMakeLists.txt  ReadMe.md
htools/hsoftplc_tools/: CMakeLists.txt
src/: CMakeLists.txt  CPPObject.cpp  CPPObject.h  CPPObjectPool.cpp  CPPObjectPool.h  HCPPObject.cpp  HCPPObject.h  HCPPObjectPool.cpp  HCPPObjectPool.h
test/: CMakeLists.txt  ReadMe.md  SConstruct  building.py  main.cpp
test/Android/: ReadMe.md
test/FreeRTOSKernelSim/: CMakeLists.txt  heap_3.c  (+2 more)
(+914 files in other folders)
